@@ -1,6 +1,6 @@
 package com.enderzombi102.loadercomplex.modloader;
 
-import com.enderzombi102.loadercomplex.api.ContentMod;
+import com.enderzombi102.loadercomplex.api.Addon;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
@@ -10,15 +10,14 @@ import java.net.URL;
 import java.net.URLClassLoader;
 import java.nio.file.*;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Objects;
 
 public class LCModLoader {
 
 	private final Path MODS_PATH;
 	private final Logger logger = LogManager.getLogger("LC-ModLoader");
-	private final ArrayList<Mod> mods = new ArrayList<>();
-	private final DynamicClassLoader classLoader = new DynamicClassLoader( new URL[] {}, this.getClass().getClassLoader() );
+	private final ArrayList<Mod> addons = new ArrayList<>();
+	private final DynamicClassLoader classLoader = new DynamicClassLoader();
 
 	public LCModLoader() {
 		MODS_PATH = Paths.get( System.getProperty("user.dir"), "mods" );
@@ -26,46 +25,41 @@ public class LCModLoader {
 
 	@SuppressWarnings("unchecked")
 	public void loadMods() {
-		final ArrayList<URL> urls = new ArrayList<>();
-
-		this.logger.info("FINDING ADDONS");
-		for ( File file : Objects.requireNonNull( this.MODS_PATH.toFile().listFiles() ) ) {
+		logger.info("FINDING ADDONS");
+		for ( File file : Objects.requireNonNull( MODS_PATH.toFile().listFiles() ) ) {
 			if( file.getName().endsWith(".lc.jar") ) {
 				try {
-					this.classLoader.addURL( file.toURI().toURL() );
-					this.mods.add( new Mod( Paths.get( file.getPath() ) ) );
+					classLoader.addURL( file.toURI().toURL() );
+					addons.add( new Mod( Paths.get( file.getPath() ) ) );
 				} catch (IOException e) {
-					this.logger.error("Failed to load possible LC addon: " + file.getName() );
+					logger.error("Failed to load possible LC addon: " + file.getName() );
 				}
 			}
 		}
 
-		this.logger.info("INSTANTIATING MODS");
-		for ( Mod mod : this.mods ) {
+		logger.info("INSTANTIATING ADDONS");
+		for ( Mod mod : addons) {
 			try {
 				Class<?> classToLoad = Class.forName( mod.getMainClass(), true, classLoader );
-				if (
-						Arrays.stream( classToLoad.getInterfaces() )
-							.anyMatch( iface -> iface.getSimpleName().equals("ContentMod") )
-				) {
-					Class<? extends ContentMod> modToLoad = (Class<? extends ContentMod>) classToLoad;
-					mod.implementation = modToLoad.newInstance();
+				if ( Addon.class.isAssignableFrom(classToLoad) ) {
+					Class<? extends Addon> modToLoad = (Class<? extends Addon>) classToLoad;
+					mod.implementation = modToLoad.getDeclaredConstructor().newInstance();
 				}
-			} catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
-				this.logger.error( "can't load addon file: " + mod.getPath() );
+			} catch ( ReflectiveOperationException e ) {
+				logger.error( "can't load addon file: " + mod.getPath(), e );
 			}
 		}
 
 	}
 
-	public ArrayList<Mod> getMods() {
-		return this.mods;
+	public ArrayList<Mod> getAddons() {
+		return addons;
 	}
 
 
 	private static class DynamicClassLoader extends URLClassLoader {
-		public DynamicClassLoader(URL[] urls, ClassLoader parent) {
-			super(urls, parent);
+		public DynamicClassLoader() {
+			super( new URL[] {}, LCModLoader.class.getClassLoader() );
 		}
 
 		@Override
